syntax = "proto3";

option java_package = "org.example.shared";
option java_outer_classname = "ChatProto";

service ChatService {
  // Подключение (server-streaming для получения сообщений)
  rpc Connect(ConnectRequest) returns (stream ChatMessage) {}

  // Отправка сообщения (unary: один запрос → один ответ с bool)
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse) {}
}

message ConnectRequest {
  string user_name = 1;
}

message SendMessageRequest {
  string from_user_name = 1;
  string to_user_name = 2;  // ID получателя
  string text = 3;
  string date_time = 4;
}

message SendMessageResponse {
  bool delivered = 1;  // true, если получатель онлайн
}

message ChatMessage {
  string from_user_name = 1;
  string text = 2;
  string date_time = 3;
}

